[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="1" type="Label" parent="."]
margin_left = 31.0
margin_top = 41.0
margin_right = 71.0
margin_bottom = 55.0
text = "1"

[node name="2" type="Label" parent="."]
margin_left = 293.0
margin_top = 45.0
margin_right = 333.0
margin_bottom = 59.0
text = "2"

[node name="3" type="Label" parent="."]
margin_left = 584.0
margin_top = 50.0
margin_right = 624.0
margin_bottom = 64.0
text = "3"

[node name="4" type="Label" parent="."]
margin_left = 821.0
margin_top = 54.0
margin_right = 861.0
margin_bottom = 68.0
text = "4"

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( -7, 0 )
points = PoolVector2Array( 262, 15, 261, 30, 261, 589 )

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2( 532, 5 )
points = PoolVector2Array( 262, 15, 261, 30, 261, 589 )

[node name="Line2D3" type="Line2D" parent="."]
position = Vector2( 274, -5 )
points = PoolVector2Array( 262, 15, 261, 30, 261, 258, 261, 589 )

[node name="Button" type="Button" parent="."]
margin_left = 44.0
margin_top = 383.0
margin_right = 184.0
margin_bottom = 460.0
rect_pivot_offset = Vector2( 98, 77 )

[node name="Label" type="Label" parent="."]
margin_left = 20.0
margin_top = 103.0
margin_right = 235.0
margin_bottom = 280.0

[node name="Label2" type="Label" parent="."]
margin_left = 294.0
margin_top = 79.0
margin_right = 509.0
margin_bottom = 256.0

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 323.0
margin_top = 292.0
margin_right = 473.0
margin_bottom = 351.0

[node name="ButtonDOIS" type="Button" parent="."]
margin_left = 316.0
margin_top = 383.0
margin_right = 483.0
margin_bottom = 460.0

[node name="Label3" type="Label" parent="."]
margin_left = 573.0
margin_top = 148.0
margin_right = 734.0
margin_bottom = 229.0

[node name="Button3" type="Button" parent="."]
margin_left = 602.0
margin_top = 386.0
margin_right = 747.0
margin_bottom = 449.0

[node name="Button4" type="Button" parent="."]
margin_left = 821.0
margin_top = 388.0
margin_right = 974.0
margin_bottom = 455.0

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 831.0
margin_top = 291.0
margin_right = 970.0
margin_bottom = 345.0

[node name="Label4" type="Label" parent="."]
margin_left = 819.0
margin_top = 80.0
margin_right = 992.0
margin_bottom = 276.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ButtonDOIS" to="." method="_on_ButtonDOIS_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
